--- a/FlickrApp/FlickrApp/Info.plist
+++ b/FlickrApp/FlickrApp/Info.plist
@@ -20,6 +20,15 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Exo-Light.ttf</string>
+		<string>Exo-ExtraLight.ttf</string>
+		<string>Exo-Bold.ttf</string>
+		<string>QumpellkaNo12.otf</string>
+		<string>Amperzand.ttf</string>
+		<string>Exo-Thin.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
