--- a/FlickrApp/FlickrApp/Info.plist
+++ b/FlickrApp/FlickrApp/Info.plist
@@ -25,6 +25,7 @@
 		<string>Exo-Light.ttf</string>
 		<string>Exo-ExtraLight.ttf</string>
 		<string>Amperzand.ttf</string>
+		<string>Exo-Bold.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
